AWS/EKS/airflow-eks-config/ingresses/airflow-ingress-airflow.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: airflow-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: airflow-webserver
              servicePort: 8080
